fix(layout): remove invisible horizontal scroll

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -23,7 +23,7 @@
 
     .fa-location-dot {
         
-        margin: 0 135px 0 0;
+        margin: 0 160px 0 0;
         color: black;
     }
 
@@ -35,7 +35,7 @@
     outline: none;
     background: transparent;
     width: 100%;
-    margin: 0 0 0 35px;
+    margin: 0 0 0 0;
     position: absolute;
 
         &::placeholder {
