--- a/sass/main.css
+++ b/sass/main.css
@@ -170,7 +170,7 @@ html {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
 }
 .header__form .fa-location-dot {
-  margin: 0 135px 0 0;
+  margin: 0 160px 0 0;
   color: black;
 }
 
@@ -179,7 +179,7 @@ html {
   outline: none;
   background: transparent;
   width: 100%;
-  margin: 0 0 0 35px;
+  margin: 0 0 0 0;
   position: absolute;
 }
 .form__input::-moz-placeholder {
